--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "Apache-2.0"
 authors = ["Trent Shailer"]
 
 [dependencies]
+parking_lot = "0.12"
 ash = { version = "0.38", default-features = false, features = [
     "std",
     "debug",
