--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ash-helper"
 description = "Helper functions for working with ash"
-version = "0.2.1"
+version = "0.3.0"
 edition = "2024"
 rust-version = "1.85"
 license = "MIT OR Apache-2.0"
@@ -42,5 +42,6 @@ vulkan-profiles = ["vp-ash"]
 
 "default_trait_access" = "warn"
 "clone_on_ref_ptr" = "warn"
+"todo" = "warn"
 
 "missing_safety_doc" = "allow"
